added piece animation css

--- a/unit-12-projects/connect_4_oop/index.html
+++ b/unit-12-projects/connect_4_oop/index.html
@@ -4,10 +4,15 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
+  <div id="header">
+    <input id="p1-color" placeholder="Player 1 Color">
+    <input id="p2-color" placeholder="Player 2 Color">
+    <button id="start-game"> Start Game</button>
+  </div>
 
-<div id="game">
-  <table id="board"></table>
-</div>
+  <div id="game">
+    <table id="board"></table>
+  </div>
 
 <script src="connect4.js"></script>
 
