--- a/unit-7-project/jasmine-testing-exercises/tip-pool/index.html
+++ b/unit-7-project/jasmine-testing-exercises/tip-pool/index.html
@@ -87,6 +87,8 @@
   src= "https://unpkg.com/jasmine-core/lib/jasmine-core/boot.js"></script>
 
 <script src="servers.test.js"></script> 
+<script src="payments.test.js"></script>
+<script src="helpers.test.js"></script>
 
 <!-- end of Jasmine tests -->
 
