complete giphy party

--- a/unit-14-projects/ajax-api/giphy-party/index.html
+++ b/unit-14-projects/ajax-api/giphy-party/index.html
@@ -28,7 +28,7 @@
       </form>
       <hr />
       <div class="row" id="gif-display">
-        <div class="col-lg-4 col-12 mt-3 mb-3">
+        <!-- <div class="col-lg-4 col-12 mt-3 mb-3">
           <img class="w-100" src="https://picsum.photos/200/300" alt="" />
         </div>
         <div class="col-lg-4 col-12 mt-3 mb-3">
@@ -36,7 +36,7 @@
         </div>
         <div class="col-lg-4 col-12 mt-3 mb-3">
           <img class="w-100" src="https://picsum.photos/200/300" alt="" />
-        </div>
+        </div> -->
       </div>
     </div>
 
