--- a/unit-4-projects/memory-game-app/home.html
+++ b/unit-4-projects/memory-game-app/home.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Game!</h1>
-    <div id="game">
-    </div>
-    <script src="script.js"></script>
+    <h1 id="heading">Memory Game!</h1>
+    <div id="game"></div>
+    <script src="app.js"></script>
   </body>
 </html>
