[main] update user profile, update name with api patch

--- a/unit-16-cumulative-project/hacker-news/index.html
+++ b/unit-16-cumulative-project/hacker-news/index.html
@@ -177,10 +177,10 @@
           <input id="current-name" disabled="true" />
         </div>
         <div class="login-input">
-          <label for="new-name">New Name</label>
-          <input id="new-name" />
+          <label for="updated-name">New Name</label>
+          <input id="updated-name" />
         </div>
-        <button type="submit">Update Name</button>
+        <button type="submit">Update Account Info</button>
         <hr />
       </form>
     </section>
@@ -198,11 +198,7 @@
         <div class="user-info">
           Account Created At: <span id="user-profile-created-at"></span>
         </div>
-        <a
-          href="#"
-          class="edit-user-button"
-          id="edit-user"
-          style="display: none"
+        <a href="#" class="edit-user-button" id="edit-user"
           >Edit Account Info</a
         >
         <hr />
